# NFT-Money

./: .gitignore  README.md
contracts/: .gitignore  ReadMe.md  hardhat.config.js  package-lock.json  package.json  tsconfig.json
contracts/contracts/: CopyrightNFT.sol  INFTMoney.sol  IXcm.sol  NFTMoney.sol
contracts/contracts/helpers/: paymentPattern.sol
contracts/contracts/ink/: Cargo.toml  lib.rs
contracts/ignition/modules/: UsingXcmModule.js
contracts/scripts/: deploy-ink-library.js  interact.js  use-xcm-precompile.js
contracts/utils/: generate-xcm.ts
front/: index.html  package-lock.json  package.json
front/src/: App.jsx  config.js
front/src/components/: CopyrightRegistry.jsx  Header.jsx  PolkadotWallet.jsx  TeleportTokens.jsx  ThemeToggle.jsx  TokenBalance.jsx  WalletConnect.jsx
front/src/context/: WalletContext.jsx
front/src/layouts/: MainLayout.jsx
front/src/pages/: App.jsx  Landing.jsx
front/src/styles/: theme.js
presentation/: NFT-MONEY-Presentation.md
